# camera_robot_calibration

./: CMakeLists.txt  README.md  data.txt  mainpage.dox  manifest.xml  package.xml  setup.py
launch/: capture_points.launch  test.launch
matlab/camera_calibration/: camera_measurement.m  camera_pose_estimation.m  frame_to_pyton_pose.m  poses.txt  random_pose.m  trplot.m
matlab/camera_calibration/html/: camera_pose_estimation.html
scripts/: camera_robot_calibration.py  camera_robot_calibration_module.py  camera_robot_calibration_rosnode.py
src/camera_robot_calib/: camera_robot_calibration_module.py
